9 Sep: AnyProxy 3.7.6:

    * optimize detail panel, ref #35

3 Sep: AnyProxy 3.7.5:

    * bugfix for intercepting urls like http://a.com?url=http://b.com

19 Aug: AnyProxy 3.7.4:

    * bugfix for intercepting urls like http://a.com?url=http://b.com

31 July: AnyProxy 3.7.3:

    * show lastest 100 records when visit the web ui
    * save map-local config file to local file
    * show an indicator when filter or map-local is in use

31 July: AnyProxy 3.7.2:

    * bugfix for issue #29

28 July: AnyProxy 3.7.1:

    * fix a bug about deflate compression

20 July: AnyProxy 3.7.0:

    * add a map-local panel on web ui, now you can easily map some request to your local files

1 July: AnyProxy 3.6.0:

    * add a filter on web ui

1 July: AnyProxy 3.5.2:

    * optimize the row height on web ui

18 June: AnyProxy 3.5.1:

    * print a hint when using SNI features in node <0.12 
    * Ref : https://github.com/alibaba/anyproxy/issues/25

18 June: AnyProxy 3.5.0:

    * it's a formal release of 3.4.0@beta.

27 Apr: AnyProxy 3.4.0@beta:

    * optimize web server and web socket interface

20 Apr 2015: AnyProxy 3.3.1:

    * now you can assign your own port for web gui

31 Mar 2015: AnyProxy 3.3.0:

    * optimize https features in windows
    * add switch to mute the console

20 Mar 2015: AnyProxy 3.2.5:

    * bugfix for internal https server 

19 Mar 2015: AnyProxy 3.2.4:

    * bugfix for absolute rule path

23 Feb 2015: AnyProxy 3.2.2:

    * [bugfix for relative rule path](https://github.com/alibaba/anyproxy/pull/18)
    
10 Feb 2015: AnyProxy 3.2.1:

    * bugfix for 3.2.0

10 Feb 2015: AnyProxy 3.2.0:

    * using SNI when intercepting https requests

28 Jan 2015: AnyProxy 3.1.2:

    * thanks to iconv-lite, almost webpage with any charset can be correctly decoded in web interface.

28 Jan 2015: AnyProxy 3.1.1:

    * convert GBK to UTF8 in web interface

22 Jan 2015: AnyProxy 3.1.0:
