@@ -8,7 +8,6 @@ function printLog(content,type){
 	if(!ifPrint) return;
 
 	var tip = content;
-	
 	console.log(tip);
 }
 
