@@ -18,7 +18,8 @@ function webInterface(config){
         ipAddress     = config.ip,
         userRule      = config.userRule,
         ruleSummary   = "",
-        customMenu    = [];
+        customMenu    = [],
+        server;
 
     try{
         ruleSummary = userRule.summary();
@@ -111,13 +112,14 @@ function webInterface(config){
     //plugin from rule file
     if(typeof userRule._plugIntoWebinterface == "function"){
         userRule._plugIntoWebinterface(app,function(){
-            app.listen(port);
+            server = app.listen(port);
         });
     }else{
-        app.listen(port);
+        server = app.listen(port);
     }
 
-    self.app  = app;
+    self.app    = app;
+    self.server = server;
 }
 
 inherits(webInterface, events.EventEmitter);
