@@ -1,6 +1,6 @@
 {
   "name": "anyproxy",
-  "version": "3.7.6",
+  "version": "3.7.7",
   "description": "A fully configurable proxy in NodeJS, which can handle HTTPS requests perfectly.",
   "main": "proxy.js",
   "bin": {
